# intervalosTstudent

./: CMakeLists.txt  average.cpp  distribuition.cpp  interval.cpp  main.cpp  t_student.cpp
